[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3", features = ["cargo"] }
futures-util = "0.3.31"
solana-clap-v3-utils = "2.2.1"
solana-cli-config = "2.2.1"
solana-client = "2.2.1"
solana-logger = "2.2.1"
solana-remote-wallet = "2.2.1"
solana-sdk = "2.2.1"
tokio = { version = "1", features = ["full"] }
solana-system-interface = "1.0.0"
rand = "0.9.2"
bounty-hunter = { workspace = true }
anchor-client = "0.31.1"
anchor-lang = "0.31.1"
spl-associated-token-account-interface = "1.0.0"