[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
rust-version = "1.89.0"

[dependencies]
anchor-client = "0.31.1"
bounty-hunter = { version = "0.1.0", path = "../programs/bounty-hunter" }
anchor-litesvm = "0.2"
litesvm-utils = "0.2"
spl-associated-token-account-client = "2.0.0"
spl-token = "7.0.0"
solana-system-interface = "1.0.0"
